<resources>
    <string name="app_name">EduHelp</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name / School Name</string>
    <string name="full_name1">Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register_as_teacher">Register as a School</string>
    <string name="register_as_student">Register as a Student</string>
    <string name="login">Login</string>
    <string name="login1">Already have an Account?</string>
    <string name="create_account">Create a new Account</string>
    <string name="create_account1">Create your account</string>
    <string name="school">Chinaogirala Govt. School</string>
    <string name="select_school">Select School</string>
    <string name="topic_that_you_wish_to_teach">Topic that you wish to teach</string>
    <string name="book_your_slot_from_the_available_slots">Book your Slot from the available slots</string>
    <string name="save">OK, Save</string>
    <string name="registration_text">Registration</string>
    <string name="add">Add</string>
    <string name="timeslots">timeslots</string>
    <string name="subject">Subject: </string>
    <string name="dateView1" />
    <string name="date">Date</string>
    <string name="user_details">Appointment details</string>
    <string name="registered_user_details">(Name, Qualification, Appointment Date, Timeslot, Subject)</string>
    <string name="DateSample">Ex: 29–06–21</string>
    <string name="ex_english">Ex: English</string>
    <string name="Selected_Timeslot">Choose Timeslot</string>
    <string name="next">NEXT ></string>
    <string name="skip">SKIP >></string>
    <string name="prev">PREV </string>
    <string name="slide_1_title">Welcome to EduHelp!</string>
    <string name="slide_1_desc">EduHelp App is a new way of communicating between Schools, Students and NGO. Our main Goal is to help Rural schools by on solving problems like Less staff, Connecting schools to Educated people and Introducing children to society through Students.</string>
    <string name="image_title">EduHelp</string>
    <string name="instructions">Instructions</string>
    <string name="Instructions_Text1">1. School Management should login as a school by providing their School names instead of their personal name, while Student volunteers should provide their Full Name.</string>
    <string name="Instructions_Text2">2. Please ensure that you provide only valid details.</string>
    <string name="Instructions_Text3">3. Necessary student details are sent to School management for verification while ensuring that your privacy is safe.</string>
    <string name="admin_text_details">Click the button below to get the all appointment Student details of your school</string>
    <string name="student_details">Student Details</string>
    <string name="your_name">Your Name</string>
</resources>