<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="708dp"
            android:background="#FFFFFF">

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/email_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:background="#64E669"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

            <Button
                android:id="@+id/gotoRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:background="#ECF1E9"
                android:text="@string/create_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:contentDescription="@string/login"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_person" />

            <TextView
                android:id="@+id/TopText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                android:fontFamily="cursive"
                android:text="@string/login"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>